<resources>
    <string name="theme_status_bar_sdk_paylivre" translatable="false">Dark</string>
    <string name="app_name">SDK Gateway Android</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="distancia">Distance</string>
    <string name="preco">Price</string>
    <string name="total_de_quilometros">Total kilometers</string>
    <string name="preco_por_litro">Price per liter</string>
    <string name="autonomia">Autonomy</string>
    <string name="quilometros_por_litro">Kilometers per liter</string>
    <string name="calcular">CALCULATE</string>
    <string name="gasto_total">Your total spend will be:</string>
    <string name="valor_total_rs">R$ 0,00</string>
    <string name="apagar_dados">Erase dataGenerateSignature</string>
    <string name="change_locale">Change Language</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="portuguese">Portuguese</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="deposit">Deposit</string>
    <string name="verify_user">Verify User</string>
    <string name="email">Email</string>
    <string name="gateway_token">Gateway Token</string>
    <string name="verify">Verify</string>
    <string name="operation_generic_error">There was an error terminating this operation!</string>
    <string name="email_not_found">Email not found</string>
    <string name="unauthorized">Not authorized</string>
    <string name="document">Document</string>
    <string name="action_continue">Continue</string>
    <string name="title_legal_notice">Legal Notice</string>
    <string name="app_close">Close</string>
    <string name="try_again"><u>Try again</u></string>
    <string name="error_title">Error</string>
    <string name="close_underline"><u>Close</u></string>
    <string name="go_back_title">Back</string>
    <string name="text_accept_terms">By clicking on the CONTINUE button you accept our Terms of Use and Privacy Terms.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_terms">Privacy Terms</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_document">Invalid document</string>
    <string name="invalid_data_error">Error in verifying the data entered</string>
    <string name="withdraw">Withdraw</string>
    <string name="type_wallet">Paylivre Wallet</string>
    <string name="type_pix">Pix</string>
    <string name="type_billet">Billet</string>
    <string name="type_wiretransfer">Bank\nTransfer</string>
    <string name="label_password">Password</string>
    <string name="average_time_hours_minutes">%1$d hour(s) and %2$d minute(s) to complete.</string>
    <string name="level_status_pix_time_normal">Normal</string>
    <string name="level_status_pix_time_slow">Late</string>
    <string name="level_status_pix_time_very_slow">Slow</string>
    <string name="average_time_minutes_seconds">%1$d minute(s) and %2$d second(s) to completion.</string>
    <string name="average_time_seconds">%1$d second(s) to completion.</string>
    <string name="email_label">Email *</string>
    <string name="document_label">Document *</string>
    <string name="title_form_start_payment">Fill in the fields below to continue</string>
    <string name="title_types_operation">Choose the option of</string>
    <string name="api_token_label">Api Token Paylivre account *</string>
    <string name="email_account_paylivre">Email Paylivre account *</string>
    <string name="payment_by_paylivre">Payment by</string>
    <string name="title_helper">Need help?</string>
    <string name="opening_hours">Monday to Friday from 9:00 am to 9:00 pm</string>
    <string name="legal_notice_part1">Paylivre is a company that facilitates electronic payment services that allows you to make deposits and withdrawals on international websites.</string>
    <string name="legal_notice_part2">The performance of PAYLIVRE BRASIL complies with the protocols established by BACEN and by Law 12,865/2013. PAYLIVRE BRASIL does not operate in the Brazilian Capital Market.</string>
    <string name="legal_notice_part3">The content published here does not constitute investment recommendation, investment or bet. PAYLIVRE BRASIL does not raise funds and does not make investments, financial contributions or bets.</string>
    <string name="required_field">Required field</string>
    <string name="error_key_invalid">invalid</string>
    <string name="error_short_password">Minimum 6 characters</string>
    <string name="type_required_error">method %1$s is mandatory.</string>
    <string name="pix_key_type_document">CPF/CNPJ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pix_key_type_phone">Cell phone</string>
    <string name="pix_key_type_email">Email</string>
    <string name="choose_pix_key_type">Choose PIX key type</string>
    <string name="label_pix_key_value">Key Pix</string>
    <string name="checking_data">Checking data...</string>
    <string name="error_invalid_api_token">Invalid Api Token Paylivre</string>
    <string name="copy_key_pix">Copy Key Pix</string>
    <string name="action_finalize">Finalize</string>
    <string name="message_pix_code_copied">PIX code copied</string>
    <string name="label_transaction_id">Identifier:</string>
    <string name="label_origin_amount">Original amount:</string>
    <string name="label_converted_amount">Converted value:</string>
    <string name="label_tax">Tax:</string>
    <string name="label_total">Total:</string>
    <string name="label_available_limit">Available\nlimit:</string>
    <string name="label_available_limit_about">This value refers to the financial limit to carry out transactions according to the level of validation of your documentation using Paylivre.</string>
    <string name="label_duedate">Due data:</string>
    <string name="instructions_make_pix_title">Instructions for making PIX</string>
    <string name="instructions_make_pix_text_1">To pay, click on the \"Copy Pix Key\" button, open your bank\'s application and look for the option to pay via Pix and paste the PIX key in the corresponding field.</string>
    <string name="checking_status_loading">Checking payment...</string>
    <string name="time_to_expire_pix">This PIX key expires on:</string>
    <string name="formatted_time">%02d:%02d</string>
    <string name="thanks_for_using_paylivre">Thanks for using Paylivre</string>
    <string name="thanks_for_using_paylivre_about">To learn more about your payment status, visit our website</string>
    <string name="label_back_to_merchant">Return to merchant</string>
    <string name="status_new">New</string>
    <string name="status_pending">Pending</string>
    <string name="status_completed">Completed</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_expired">Expired</string>
    <string name="status_reviewed">Reviewed</string>
    <string name="status_refund_pending">Refund Pending</string>
    <string name="status_refund_complete">Refund Complete</string>
    <string name="msg_status_new">Wait for the operation to process.</string>
    <string name="msg_status_pending">Awaiting confirmation of payment.</string>
    <string name="msg_status_completed">Operation completed with success.</string>
    <string name="msg_status_cancelled">Your operation was canceled and the value paid will be hindered.</string>
    <string name="msg_status_expired">Unfortunately or processing time expired. Please try again!</string>
    <string name="msg_status_reviewed">Its operation is undergoing a revision and the logo will be finalized.</string>
    <string name="msg_status_refund_pending">Don\'t worry, your refund is being processed and the logo will be in your contact.</string>
    <string name="msg_status_refund_complete">Your refund was made in succession!</string>
    <string name="text_accept_terms_finishscreen">By requesting a transaction you accept our Terms of Use and Privacy Terms.</string>
    <string name="last_update_time">Last updated at %1$s.</string>
    <string name="payment_label_status">Payment</string>
    <string name="withdrawal_request_label">Withdrawal Request</string>
    <string name="witidrawal_order_id_label">Order ID#%1$s</string>
    <string name="label_title_withdraw_pix">Cash Out with</string>
    <string name="label_fast">Fast</string>
    <string name="info_withdraw_pix_fast">Receive your payment in no time at no additional cost</string>
    <string name="label_simple">Simple</string>
    <string name="info_withdraw_pix_simple">To withdraw just click to continue and wait the approval.</string>
    <string name="info_withdraw_pix_safe">The PIX was developed by the Central Bank for make your shopping easier</string>
    <string name="label_safe">Safe</string>
    <string name="label_details">Details</string>
    <string name="label_status">Status</string>
    <string name="label_status_approval_in_merchant">Merchant Approval</string>
    <string name="send">Send</string>
    <string name="close">Close</string>
    <string name="label_about_generate_api_token">How to generate the token api?</string>
    <string name="requesting_email">Requesting email...</string>
    <string name="message_request_remember_password">Request sent successfully. You will receive the instructions in your email.</string>
    <string name="instructions_how_to_generate_api_token">To generate the api token, log into
        your Paylivre account, through the website or app.\n\nGo to your profile, in the security tab, and click \"generate Api Token\".\n\nWith your generated Api token, just copy and paste it in the corresponding field.</string>
    <string name="error_forgot_password_invalid_email">Invalid email.</string>
    <string name="error_forgot_password_not_found_email">We did not find the email you entered.</string>
    <string name="error_forgot_password_generic">We were unable to process your request, please try again later.</string>
    <string name="instruction_wallet_1">Make sure you have enough balance in your Paylivre wallet to make this deposit.</string>
    <string name="instruction_wallet_2">Be sure to enter the same data as when registering your Paylivre account so that the debit can be done correctly.</string>
    <string name="instructions_wallet_paylivre">For this transaction, the balance of the Paylivre wallet was used!</string>
    <string name="title_proof_deposit">Deposit receipt</string>
    <string name="no_file_selected">No file selected</string>
    <string name="label_instructions_insert_proof_file">The file must be of the type: jpg, png, jpeg and maximum size of 5MB.</string>
    <string name="submit">Submit</string>
    <string name="choose_file">Choose file</string>
    <string name="insert_proof_tip_text">Insert proof, tip text</string>
    <string name="proof_preview">Proof preview</string>
    <string name="withdraw_pix_instruction1_text">Withdraw pix instruction 1, text</string>
    <string name="withdraw_pix_instruction2_text">Withdraw pix instruction 2, text</string>
    <string name="withdraw_pix_instruction3_text">Withdraw pix instruction 3, text</string>
    <string name="choose_file_image">Choose file, image</string>
    <string name="pix_icon">Pix icon</string>
    <string name="fast_icon">Fast icon</string>
    <string name="simple_icon">Simple icon</string>
    <string name="safe_icon">Safe icon</string>
    <string name="generate_api_token_title">Generate api token, title</string>
    <string name="generate_api_token_text">Generate api token, text content</string>
    <string name="close_how_to_generate_api_token">Close how to generate api token</string>
</resources>