<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contentLegalNotice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textBtnShowLegalNotice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_legal_notice"
        android:textAlignment="center"
        android:textColor="@color/secondary"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textlegalNoticePart1"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/legal_notice_part1"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textlegalNoticePart2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/legal_notice_part2"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textlegalNoticePart3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/legal_notice_part3"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="14sp" />

</LinearLayout>

