<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/container"
    tools:context=".ui.howToGenerateApiToken.HowToGenerateApiToken">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerModal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/containerFormSendRememberPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtTitleModal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/avenir_next_lt_pro_bold"
                android:text="@string/label_about_generate_api_token"
                android:contentDescription="@string/generate_api_token_title"
                android:textColor="@color/secondary_color_paylivre_sdk"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtSubTitleModal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/avenir_next_lt_pro_regular"
                android:lineHeight="25sp"
                android:text="@string/instructions_how_to_generate_api_token"
                android:contentDescription="@string/generate_api_token_text"
                android:textColor="@color/secondary_color_paylivre_sdk"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnCloseModal"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/avenir_next_lt_pro_regular"
        android:minHeight="60dp"
        android:text="@string/close"
        android:contentDescription="@string/close_how_to_generate_api_token"
        android:textAllCaps="false"
        android:textColor="@color/primary_color_paylivre_sdk"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerModal"
        app:strokeColor="@color/primary_color_paylivre_sdk"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>